mysql/deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mysql.web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysql
                port:
                  number: 3306
